k8s/vault-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: vault
  namespace: openbank
spec:
  volumes:
  - name: vault-test-journal
    persistentVolumeClaim:
      claimName: vault-test-journal-claim
  containers:
    - name: vault
      image: openbank/vault:master
      resources:
        limits:
          memory: "500Mi"
          cpu: "200m"
      imagePullPolicy: Always
      volumeMounts:
      - mountPath: /data
        name: vault-test-journal
      lifecycle:
        preStop:
          exec:
            command: ["killall", "-g", "/entrypoint"]
  terminationGracePeriodSeconds: 60
