k8s/lake-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: lake
  name: lake
  namespace: openbank
spec:
  replicas: 1
  selector:
    matchLabels:
      run: lake
  template:
    metadata:
      labels:
        run: lake
    spec:
      hostname: lake
      containers:
        - name: lake
          image: openbank/lake:master
          ports:
          - containerPort: 5562
          - containerPort: 5561
          securityContext:
            privileged: true
          lifecycle:
            preStop:
              exec:
                command: ["killall", "-g", "/entrypoint"]
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: lake
  name: lake
  namespace: openbank
spec:
  ports:
    - name: port-1
      port: 5562
      protocol: TCP
      targetPort: 5562
    - name: port-2
      port: 5561
      protocol: TCP
      targetPort: 5561
  selector:
    run: lake
