k8s/wall-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: wall
  name: wall
  namespace: openbank
spec:
  selector:
    matchLabels:
      run: wall
  template:
    metadata:
      labels:
        run: wall
    spec:
      volumes:
      - name: transaction-journal
        persistentVolumeClaim:
          claimName: transaction-journal-claim
      containers:
        - name: wall
          image: openbank/wall:master
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: /data
            name: transaction-journal
          lifecycle:
            preStop:
              exec:
                command: ["killall", "-g", "/entrypoint"]
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: wall
  name: wall
  namespace: openbank
spec:
  ports:
    - name: port-1
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: wall
